# groth16verify

./: Cargo.toml
benches/: zwaves_jni_benches.rs
javalib/src/main/java/com/wavesplatform/zwaves/bn256/: Groth16.java  JNILibrary.java
javalib/src/test/java/com/wavesplatform/zwaves/bn256/: Groth16Test.java
src/: lib.rs  serialization.rs  verifier.rs
