[package]
name = "zwaves_jni"
version = "0.2.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zwaves_jni"

[[bin]]
name="show_test_vectors"

[dependencies]
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"
jni = "0.14.0"
byteorder = "1"
rand = "0.4"
[dependencies.pairing]
version = "=0.18"
package = "pairing_ce"

[dependencies.ff]
version = "=0.7"
features = ["derive"]
package = "ff_ce"



[features]
default = []